# teo-sharon

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
libraries/CheckSelfCollisionLibrary/: CMakeLists.txt  CheckSelfCollisionLibrary.cpp  CheckSelfCollisionLibrary.hpp
libraries/HumanHandToRobotJointsIK/: CMakeLists.txt  HumanHandToRobotJointsIK.cpp  HumanHandToRobotJointsIK.hpp
libraries/HumanMotionData/: CMakeLists.txt  HumanMotionData.cpp  HumanMotionData.hpp
programs/: CMakeLists.txt  CreateTrainVal.py  FeaturesDescriptor.py  createTeoDatasetForSiameseNetwork.py  deleteRandomImages.py  from_rgb_depth_images_to_yarp_ports.py  opencv_hog.py  renameAndOrderFiles.py  siameseNetworkWithTripletLoss.py  store_rgb_depth_images_from_yarp_ports.py  test.py  testing_HOG_SVM.py  trainTestDataset.py  train_hog_svg.py
programs/CropSalientObject/: CMakeLists.txt  CropSalientObject.cpp  CropSalientObject.hpp  SegmentorThread.cpp  SegmentorThread.hpp  main.cpp
programs/EncryptedComms/: clientEncrypted.py  serverEncrypted.py
programs/GenerateManipulationTrajectories/: CMakeLists.txt  ComputeDmpJointLimits.py  checkRotations.py  config_dmp_aproach1.yaml  dmp1DOF-drawbacks.py  dmp1DOF.py  dmp2DOF-drawbacks.py  dmpTest.py  executeJointPathFromCsvFile.py  executePathFromCsvFile.py  executePathGeneratedWithDMP.py  executeTrajectoryDMPsJointLimits.py  generateFakeJointTrajectories.py  model_dmp_approach1.yaml  plotHandTrajectories.py  plotHumanHandRobotsEFTrajectory.py  remove_repeated_frames.py  smoothJointsPathFromCsvFile.py  smoothPathFromCsvFile.py  tpgmm.cpp
programs/GenerateManipulationTrajectories/JointLimitsDMPLib/: setup.py
programs/GenerateManipulationTrajectories/JointLimitsDMPLib/JointLimitsDMP.egg-info/: PKG-INFO  SOURCES.txt
programs/GenerateManipulationTrajectories/JointLimitsDMPLib/JointLimitsDMPLib/: jointLimitsDMP.py
programs/GenerateManipulationTrajectories/JointLimitsDMPLib/tests/: test_jointLimitsDMP.py
programs/GenerateManipulationTrajectories/simpleExamples/: cartesianDMPMotion.py  createSimpleDemonstrations.py
programs/GenerateManipulationTrajectories/simpleExamples/trajectories/: straight-line-cartesian-0.csv  straight-line-joint-0.csv
programs/GenerateManipulationTrajectories/trajectories/: test-right-arm-motion-smooth.csv
programs/GenerateManipulationTrajectories/trajectories/graspcup1/: test-right-arm-motion-cup1.csv  test-right-arm-motion-cup2.csv  test-right-arm-motion-cup3.csv  test-right-arm-motion-cup4.csv  test-right-arm-motion-cup5.csv  test-right-arm-motion-smooth1-aproach.csv  test-right-arm-motion-smooth1-joint.csv  test-right-arm-motion-smooth1-optimized.csv  test-right-arm-motion-smooth2-joint.csv  test-right-arm-motion-smooth2-optimized.csv  test-right-arm-motion-smooth2.csv  test-right-arm-motion-smooth3-joint.csv  test-right-arm-motion-smooth3-optimized.csv  test-right-arm-motion-smooth3.csv  test-right-arm-motion-smooth4.csv  test-right-arm-motion-smooth5.csv  test-right-arm-motion-table1.csv  test-right-arm-motion-table2.csv  test-right-arm-motion2.csv  (+6 more)
programs/GetGraspingPoses/: CMakeLists.txt  GetGraspingPoses.cpp  GetGraspingPoses.hpp  SegmentorThread.cpp  SegmentorThread.hpp  main.cpp
programs/MapHumanHandTrajectoryToRobotEndEffector/: CMakeLists.txt  MapHumanHandTrajectoryToRobotEndEffector.cpp  MapHumanHandTrajectoryToRobotEndEffector.hpp  test-right-arm-motion1.csv
programs/MapHumanHandTrajectoryToRobotJointSpace/: CMakeLists.txt  MapHumanHandTrajectoryToRobotJointSpace.cpp  MapHumanHandTrajectoryToRobotJointSpace.hpp  plotHumanHandRobotsEFTrajectory.py
programs/MapHumanToRobotMotionPerFrameIK/: CMakeLists.txt  MapHumanToRobotMotionPerFrameIK.cpp  MapHumanToRobotMotionPerFrameIK.hpp  checkLinkAdjustments.py  executeJointsFromCsvFile.py
programs/MapHumanToRobotMotionWholeTrajectory/: CMakeLists.txt  MapHumanToRobotMotion.cpp  MapHumanToRobotMotion.hpp  graph.h
programs/SplineBasedMotionRetargeting/: CMakeLists.txt  SplineBasedMotionRetargeting.cpp  SplineBasedMotionRetargeting.hpp  plotHumanHandRobotsEFTrajectory.py
programs/TrajectoryGeneration/: CMakeLists.txt  TrajectoryGeneration.cpp  TrajectoryGeneration.hpp  TrajectoryGenerationOld.cpp  TrajectoryGenerationOld.hpp  TrajectoryThread.hpp  main.cpp
programs/collisionsVisualization/: CMakeLists.txt  CollisionsVisualization.cpp  CollisionsVisualization.hpp  main.cpp
programs/colorsDetection/: CMakeLists.txt  ColorsDetection.cpp  ColorsDetection.hpp  SegmentorThread.cpp  SegmentorThread.hpp  main.cpp
programs/demoSharon/: CMakeLists.txt  DIrectMatchingGlassesTeoImages.py  changePositionModes.py  demo_only_asr.py  demo_sharon.py  fake_object_category_xyz.py  matchingGlassesTeoImages.py  setup.py  spawn_object_gazebo.py  teo_left_right_grasp.py  testHand.py
programs/demoSharon/SharonLib/: config_asr.py  sharon.py
programs/glassesDatabaseVisualization/: find_name_server.py  generateCropsDatasetfromglassesImageAndFixations.py  getImagesFromXtionCamera.py  glasses_database.py  glasses_server_yarp_comms.py  glasses_server_yarp_coms.py  matchingGlassesTeoImages.py  resizeImages.py  sendDataToYarpPortThroughSocket.py  sendGlassesData.py
programs/utils/: CreateImages.py  CreateTrainVal.py  addOclussionsToDataset.ipynb  addOclussionsToDataset.py  changeCategory.py  create3dBoundingPoints.py  createTeoDatasetForSiameseNetwork.py  debug_trajectory_generation_errors.py  deleteRandomImages.py  ppmImageTojpg.py  renameAndOrderFiles.py  spawn_object_gazebo.py  store_rgb_depth_images_from_yarp_ports.py  testTrajectoryGeneration.py  trainTestDataset.py
share/: CMakeLists.txt  leftLegDumper.xml
share/applications/: demoSharon.xml  demoSharonSim.xml  objectDumper.xml  text.xml
share/conf/: TrajectoryGenerationRightArm.ini  TrajectoryGenerationTrunkAndLeftArm.ini  TrajectoryGenerationTrunkAndRightArm.ini
share/contexts/: publishJointStatesSim.ini
share/contexts/trajectoryGeneration/: TrajectoryGenerationLeftArm.ini  TrajectoryGenerationTrunkAndRightArm.ini  TrajectoryGenerationTrunkAndRightArmSim.ini
tests/: CMakeLists.txt  testCheckSelfCollisionLibrary.cpp
(+101 files in other folders)
