# Copyright: Universidad Carlos III de Madrid (C) 2021
# Authors: Elisabeth Menendez
# CopyPolicy: Released under the terms of the LGPLv2.1 or later

# add_subdirectory(CropSalientObject)
add_subdirectory(TrajectoryGeneration)
add_subdirectory(GetGraspingPoses)
#add_subdirectory(MapHumanHandTrajectoryToRobotEndEffector)
#add_subdirectory(GenerateManipulationTrajectories)
